--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,624 +1,123 @@
-﻿#mainNav {
-  border-color: rgba(34, 34, 34, 0.05);
-  background-color: #fff;
-  -webkit-transition: all 0.35s;
-  -moz-transition: all 0.35s;
-  transition: all 0.35s;
-  font-family: "Didact Gothic", sans-serif;
-  font-weight: 200;
-  letter-spacing: 1px;
+﻿.head {
+    background-color: #222222;
 }
 
-#mainNav .navbar-brand {
-  color: #ea4049;
-  font-family: "Didact Gothic", sans-serif;
-  font-weight: 200;
-  letter-spacing: 1px;
-}
-
-#mainNav .navbar-brand:hover,
-#mainNav .navbar-brand:focus {
-  color: #eedec4;
-}
-
-#mainNav .navbar-toggler {
-  font-size: 12px;
-  padding: 8px 10px;
-  color: #222222;
-}
-
-#mainNav .navbar-nav > li > a {
-  font-size: 12px;
-  font-family: "Didact Gothic", sans-serif;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-
-#mainNav .navbar-nav > li > a.active {
-  color: #ea4049 !important;
-  background-color: #ffffff;
-}
-
-#mainNav .navbar-nav > li > a.active:hover {
-  background-color: transparent;
-}
-
-#mainNav .navbar-nav > li > a,
-#mainNav .navbar-nav > li > a:focus {
-  color: #222222;
-}
-
-#mainNav .navbar-nav > li > a:hover,
-#mainNav .navbar-nav > li > a:focus:hover {
-  color: #eedec4;
-}
-
-/*@media (min-width: 992px) {
-  #mainNav {
-    border-color: transparent;
-    background-color: transparent;
-  }
-  #mainNav .navbar-brand {
-    color: fade(#222222, 70%);
-  }
-  #mainNav .navbar-brand:hover,
-  #mainNav .navbar-brand:focus {
-    color: white;
-  }
-  #mainNav .navbar-nav > li > a,
-  #mainNav .navbar-nav > li > a:focus {
-    color: #eedec4;
-  }
-  #mainNav .navbar-nav > li > a:hover,
-  #mainNav .navbar-nav > li > a:focus:hover {
-    color: white;
-  }
-  #mainNav.navbar-shrink {
-    border-color: rgba(34, 34, 34, 0.1);
-    background-color: white;
-  }
-  #mainNav.navbar-shrink .navbar-brand {
-    color: #222222;
-  }
-  #mainNav.navbar-shrink .navbar-brand:hover,
-  #mainNav.navbar-shrink .navbar-brand:focus {
-    color: #fdcc52;
-  }
-  #mainNav.navbar-shrink .navbar-nav > li > a,
-  #mainNav.navbar-shrink .navbar-nav > li > a:focus {
-    color: #222222;
-  }
-  #mainNav.navbar-shrink .navbar-nav > li > a:hover,
-  #mainNav.navbar-shrink .navbar-nav > li > a:focus:hover {
-    color: #ea4049;
-  }
-}*/
-
-header.masthead {
-  position: relative;
-  width: 100%;
-  padding-top: 150px;
-  padding-bottom: 100px;
-  color: black;
-  background-image: url("../img/recordstore.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-header.masthead .header-content {
-  max-width: 500px;
-  text-align: center;
-}
-
-header.masthead .header-content h1 {
-  font-size: 30px;
-}
-
-header.masthead .device-container {
-  max-width: 325px;
-  margin-right: 30%;
-}
-
-header.masthead .device-container .screen img {
-  border-radius: 3px;
-  padding-top: 75px;
-}
-
-.mb-5 {
-  color: white;
-  margin-bottom: 0;
-}
-
-.iphone {
-  width: 150%;
-  margin: 0 auto;
-}
-
-/*@media (min-width: 992px) {
-  header.masthead {
-    height: 85vh;
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-  header.masthead .header-content {
-    margin-bottom: 0;
-    text-align: left;
-  }
-  header.masthead .header-content h1 {
-    font-size: 50px;
-  }
-  header.masthead .device-container {
-    max-width: 325px;
-  }
-} 
-
-/* FORM STYLES */
-
-.mail {
-  background: #eee;
-}
-
-.contact1 container {
-  background: #eee;
-}
-
-.contact1 form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
-  width: 100%;
-}
-
-.contact1 form label {
-  display: block;
-}
-
-.contact1 form p {
-  margin: 0;
-  /* width: 500px; */
-}
-
-.contact1 form .full {
-  grid-column: 1 / 3;
-}
-
-.contact1 form button,
-.contact1 form input,
-.contact1 form textarea {
-  width: 150px;
-  padding: 1em;
-  border: 1px solid #c9e6ff;
-}
-
-#email {
-  width: 40vw;
-}
-
-.contact1 form button {
-  background: #d3ebf7;
-  border: 0;
-  text-transform: uppercase;
-}
-
-.contact1 form button:hover,
-.contact1 form button:focus {
-  background: #eedec4;
-  color: #222222;
-  outline: 0;
-  transition: background-color 1s ease-out;
-}
-
-.alert {
-  text-align: center;
-  padding: 10px;
-  background: #79c879;
-  color: #fff;
-  margin-bottom: 10px;
-  display: none;
-}
-
-/* Social Media */
-section.cta .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-section.contact {
-  text-align: center;
-}
-
-section.contact h2 {
-  margin-top: 0;
-  margin-bottom: 25px;
-}
-
-section.contact h2 i {
-  color: #dd4b39;
-}
-
-section.contact ul.list-social {
-  margin-top: 30px;
-  margin-bottom: 50px;
-}
-
-section.contact ul.list-social li a {
-  font-size: 40px;
-  line-height: 80px;
-  display: block;
-  width: 80px;
-  height: 80px;
-  color: #eedec4;
-  border-radius: 100%;
-}
-
-section.contact ul.list-social li.social-twitter a {
-  background-color: #222222;
-}
-
-section.contact ul.list-social li.social-twitter a:hover {
-  background-color: #ea4049;
-}
-
-section.contact ul.list-social li.social-facebook a {
-  background-color: #222222;
-}
-
-section.contact ul.list-social li.social-facebook a:hover {
-  background-color: #ea4049;
-}
-
-section.contact ul.list-social li.social-instagram a {
-  background-color: #222222;
-}
-
-section.contact ul.list-social li.social-instagram a:hover {
-  background-color: #ea4049;
-}
-
-section.contact ul.list-social li.social-mail a {
-  background-color: #222222;
-}
-
-section.contact ul.list-social li.social-mail a:hover {
-  background-color: #ea4049;
-}
-
-.bg-color {
-  background: #eedec4;
-}
-
-/* footer */
-
-footer {
-  padding: 25px 0;
-  text-align: center;
-  color: rgba(255, 255, 255, 0.3);
-  background-color: #222222;
-}
-
-footer p {
-  font-size: 12px;
-  margin: 0;
-}
-
-footer ul {
-  margin-bottom: 0;
-}
-
-footer ul li a {
-  font-size: 12px;
-  color: rgba(255, 255, 255, 0.3);
-}
-
-footer ul li a:hover,
-footer ul li a:focus,
-footer ul li a:active,
-footer ul li a.active {
-  text-decoration: none;
+.title {
+    background-image: url("../img/tshirt-spinnr.png");
+    background-repeat: no-repeat;
+    background-size: 40vh;
+    background-position: center;
+    height: 30vh;
+ 
 }
 
 .video {
-  position: absolute;
-  top: 6%;
-  left: 12.5%;
-}
-
-#kickstarter {
-  background: #eee;
-}
-
-html,
-body {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  font-family: "Didact Gothic", sans-serif;
-}
-
-a {
-  color: #000000;
-  -webkit-transition: all 0.35s;
-  -moz-transition: all 0.35s;
-  transition: all 0.35s;
-}
-
-#btncolor {
-  background: #ea4049;
-  border-style: none;
-  color: #eedec4;
-}
-
-a:hover,
-a:focus {
-  color: #eedec4;
-}
-
-hr {
-  max-width: 100px;
-  margin: 25px auto 0;
-  border-width: 1px;
-  border-color: rgba(34, 34, 34, 0.1);
-}
-
-hr.light {
-  border-color: eedec4;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Didact Gothic", sans-serif;
-  font-weight: 200;
-  letter-spacing: 1px;
-}
-
-p {
-  font-size: 18px;
-  line-height: 1.5;
-  margin-bottom: 20px;
-}
-
-section {
-  padding: 100px 0;
-}
-
-section h2 {
-  font-size: 50px;
-}
-
-section.download {
-  position: relative;
-  padding: 150px 0;
-}
-
-section.download h2 {
-  font-size: 50px;
-  margin-top: 0;
-}
-
-section.download .badges .badge-link {
-  display: block;
-  margin-bottom: 25px;
-}
-
-section.download .badges .badge-link:last-child {
-  margin-bottom: 0;
-}
-
-section.download .badges .badge-link img {
-  height: 60px;
-}
-
-@media (min-width: 768px) {
-  section.download .badges .badge-link {
-    display: inline-block;
-    margin-bottom: 0;
-  }
-
-   section.download h2 {
-    font-size: 70px;
-  }
+    height: 60vh;
 
 }
 
-@media (max-width: 768px) {
-  .iphone {
-    position: absolute;
-    z-index: -1500;
-    width: 1%;
-  }
-  .video {
-    margin-top: -42%;
-    
+#sampleMovie {
+    width: 100%;
+    height: 80%;
+    align-content: center;
 
-  }
-  .youtubevid {
-    width: 90vw;
-    height: 170px; /* 320px */
-    border: 3px solid white;
-    margin: 0 auto;
-    margin-top: 20%;
-    margin-left: -8.5%;
-
-  }
-
-  h2 {
-  margin-top: -27%;
-  font-size: 30px;
-}
 }
 
+.description {
+    color: white;
+    text-align:center;
+    font-family: 'Didact Gothic', sans-serif;
+    font-size: 200%;
+    display: flex;
+    align-items: center;
 
-  
 }
 
-section.features .section-heading {
-  margin-bottom: 100px;
+.demo {
+    background-color: #eedec4;
 }
 
-section.features .section-heading h2 {
-  margin-top: 0;
-}
+.stream {
+    text-align: center;
 
-section.features .section-heading p {
-  margin-bottom: 0;
-}
-
-section.features .device-container,
-section.features .feature-item {
-  max-width: 325px;
-  margin: 0 auto;
-}
-
-section.features .device {
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
-  -o-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  transform: rotate(90deg);
-}
-
-section.features .device-container {
-  margin-bottom: 100px;
-}
-
-@media (min-width: 992px) {
-  section.features .device-container {
-    margin-bottom: 0;
-  }
-}
-
-section.features .feature-item {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  text-align: center;
-}
-
-section.features .feature-item h3 {
-  font-size: 30px;
-}
-
-section.cta {
-  position: relative;
-  padding: 250px 0;
-  background-image: url("../img/bg-cta.jpg");
-  background-position: center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-section.cta .cta-content {
-  position: relative;
-  z-index: 1;
-}
-
-section.cta .cta-content h2 {
-  font-size: 50px;
-  max-width: 450px;
-  margin-top: 0;
-  margin-bottom: 25px;
-  color: white;
-}
-
-@media (min-width: 768px) {
-  section.cta .cta-content h2 {
-    font-size: 80px;
-  }
-}
-
-section.cta .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.bg-primary {
-  background: #fdcc52;
-  background: -webkit-linear-gradient(#fdcc52, #fdc539);
-  background: linear-gradient(#eee, #eee);
-}
-
-.text-primary {
-  color: #fdcc52;
-}
-
-.no-gutter > [class*="col-"] {
-  padding-right: 0;
-  padding-left: 0;
-}
-
-.btn-outline {
-  color: #eedec4;
-  border: 1px solid;
-  border-color: #eedec4;
-}
-
-.btn-outline:hover,
-.btn-outline:focus,
-.btn-outline:active,
-.btn-outline.active {
-  color: #eedec4;
-  border-color: #222222;
-  background-color: #ea4049;
 }
 
 .btn {
-  border-radius: 300px;
-  font-family: "Didact Gothic", sans-serif;
-  letter-spacing: 2px;
-  text-transform: uppercase;
+    width: 100%;
+    background-color: #ea4049;
+    font-family: 'Didact Gothic', sans-serif;
+    border: none;
+    font-size: 120%;
+    margin-bottom: 5%;
 }
 
-.btn-xl {
-  font-size: 11px;
-  padding: 15px 45px;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-.brand {
-  text-align: center;
-}
-
-.brand span {
-  color: #fff;
-}
-
-.wrapper > * {
-  padding: 1em;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#olid {
+    display: flex;
+    align-items: center;
+    padding-top: 15%;
+    text-align: left;
+    padding-bottom: 1%;
 
 }
+
+.instructions {
+    font-family: 'Didact Gothic', sans-serif;
+    font-size: 200%;
+    text-align: center;
+}
+
+.kickstarter {
+    background-color: darkgreen;
+}
+
+.mailinglist {
+    background-color: green;
+}
+
+.social {
+    background-color: silver;
+}
+
+.facebook {
+    background-color: darkblue;
+}
+
+.twitter {
+    background-color: lightblue;
+}
+
+.instagram {
+    background-color: pink;
+}
+
+.email {
+    background-color: gray;
+}
+
+.footer {
+    background-color: black;
+}
+
+
+
+
+
+/* LIVE DEMO STYLING*/
+
+.handsome, #paint {
+    width: 90%;
+    margin: 0 auto;
+    display: block;
+}
+
+#paint {
+  width: 0%;
+}
+
+
+
+ol {
+    line-height: 200%
+    margin-top: 20%;
+}
+
