--- a/views/index.html
+++ b/views/index.html
@@ -12,188 +12,63 @@
   <link href="../public/css/style.css" rel="stylesheet" />
 </head>
 
-<body id="home">
-
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-      <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">spinnr.</a> -->
-      <a href="#page-top">
-        <img src="/img/tshirt-spinnr.svg" href="#page-top" style="height: 35px; padding: 0 auto;">
-      </a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fa fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#kickstarter">Kickstarter</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features">Live Demo</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <header class="masthead">
-    <div class="bg">
-      <div class="container h-100">
-        <div class="row h-100">
-          <div class="col-lg-6 my-auto">
-            <div class="header-content mx-auto">
-              <h2 class="mb-5">Spinnr is a photo to music translator for iPhone and Android</h2>
-              <a href="/login" id="btncolor" class="btn btn-outline btn-xl js-scroll-trigger">Learn More!</a>
-            </div>
-          </div>
-          <div class="col-lg-6 my-auto">
-            <div class="device-container">
-              <div>
-                <img class="iphone" src="/img/iphone.png" alt="iphone">
-                <div class="device">
-                  <!-- <div class="screen">
-                      <img src="img/tshirt-spinnr.svg" class="img-fluid" alt="">
-                    </div> -->
-                  <div class="video">
-                    <iframe width="375" height="220" src="https://www.youtube.com/embed/c9yGMZ9ANL0" frameborder="0" allow="autoplay; encrypted-media"
-                      allowfullscreen class="youtubevid"></iframe>
-                  </div>
-                  <div class="button">
-                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+<div class="container">
+    <div class="row head">
+        <div class="title col-lg-12"></div>
+        <div class="description col-lg-6">
+        Spinnr is a photo to music translator coming soon to iPhone and Android. Try our browser demo below to see how it works.    
         </div>
-      </div>
-    </div>
-  </header>
-
-  <section class="kickstarter text-center" id="kickstarter">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 mx-auto">
-    <!--       <h2 class="section-heading">Kickstarter coming soon!</h2>
-          <p>Join our mailing list below</p> -->
-
-          <video autoplay playsinline class="handsome"></video>
-          <canvas id="paint"></canvas>
-          <button id = "snap" onClick="takePhoto()">📸</button>
-          <button id = "delete" onClick="deletePhoto()">🗑️</button>
+        <div class="video col-lg-6">
+          <video id="sampleMovie" src="../public/img/webvideo.mp4" controls></video>
         </div>
-      </div>
     </div>
-  </section>
 
-  <div class="container" id="contact">
-    <div class="row w-100">
-      <div class="col-md-8 mx-auto">
-        <h1 class="brand">Join our mailing list</h1>
-        <div class="contact1">
-          <div class="alert" id="fade">Thanks for joining our mailing list!</div>
-          <form id="contactForm">
-            <p>
-              <label>Email Address</label>
-              <input type="email" name="email" id="email" required>
-            </p>
-            <button type="submit">Submit</button>
-          </form>
+
+
+    <div class="row demo">
+      <div class="tryitout col-lg-12"></div>
+  
+
+
+    
+         <div class="instructions col-lg-6">
+         <div class id = "olid">
+          <ol>
+            <li> Press "Start The Demo" to begin</li>
+            <li> Log into Spotify if prompted</li>
+            <li> Take a photo of an album cover</li>
+            <li> Enjoy your music </li>
+          </ol>
         </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="bg-color">
-    <section class="contact bg-color">
-      <div class="container">
-        <h2>Follow Us!</h2>
-        <ul class="list-inline list-social">
-          <li class="list-inline-item social-twitter">
-            <a href="https://www.twitter.com/spinnrapp/" target="_blank">
-              <i class="fa fa-twitter"></i>
-            </a>
-          </li>
-          <li class="list-inline-item social-facebook">
-            <a href="https://www.facebook.com/spinnrapp/" target="_blank">
-              <i class="fa fa-facebook"></i>
-            </a>
-          </li>
-          <li class="list-inline-item social-instagram">
-            <a href="https://www.instagram.com/spinnrapp/" target="_blank">
-              <i class="fa fa-instagram"></i>
-            </a>
-          </li>
-          <li class="list-inline-item social-mail">
-            <a href="mailto:spinnrapp@gmail.com">
-              <i class="fa fa-envelope"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-  </div>
-
-  <footer>
-    <div class="container">
-      <p>&copy; Spinnr 2018. All Rights Reserved.</p>
-      <!-- <ul class="list-inline">
-              <li class="list-inline-item">
-                <a href="#">Privacy</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">Terms</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">FAQ</a>
-              </li>
-            </ul> -->
-    </div>
-  </footer>
-
-  <!-- <div class="container">
-    <div class="contact">
-      <div class="row w-100">
-        <div class="col-md-8 mx-auto">
-          <h1 class="brand">Join our mailing list</h1>
-          <h3>Email Us</h3>
-          {{msg}}
-          <div class="alert" id="fade">Thanks for joining our mailing list!</div>
-          <form method="POST" id="contactForm">
-            <p>
-              <label>Name</label>
-              <input type="text" name="name">
-            </p>
-            <p>
-              <label>Company</label>
-              <input type="text" name="company">
-            </p>
-            <p>
-              <label>Email Address</label>
-              <input type="email" name="email" id="email" required>
-            </p>
-            <p>
-              <label>Phone Number</label>
-              <input type="text" name="phone">
-            </p>
-            <p class="full">
-              <label>Message</label>
-              <textarea name="message" rows="5"></textarea>
-            </p>
-            <p class="full">
-              <button type="submit">Submit</button>
-            </p>
-          </form>
+          <a href="/login" class="btn btn-primary">Start the Demo</a>
+              
         </div>
-      </div>
+
+             <div class="stream col-lg-6">
+  <video autoplay playsinline class="handsome"></video>
+  <canvas id="paint"></canvas>
+    <button class = "btn btn-primary" onClick="takePhoto()">SPIN IT</button>
+
+         </div>
+
+
+
+
     </div>
-  </div>
-  </div> -->
+    <div class="row kickstarter">
+        <div class="mailinglist col-xs-12"></div>
+    </div>
+    <div class="row social">
+        <div class="facebook col-xs-6 col-md-3"></div>
+        <div class="twitter col-xs-6 col-md-3"></div>
+        <div class="instagram col-xs-6 col-md-3"></div>
+        <div class="email col-xs-6 col-md-3"></div>
+    </div>
+    <div class="row footer">
+        <div class="col-xs-12"></div>
+    </div>
+</div>
 
 <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
