--- a/public/css/style.css
+++ b/public/css/style.css
@@ -319,6 +319,11 @@ form {
   .title {
     margin-top: 20px;
   }
+
+  .demoBtn {
+    text-align: center;
+    width: 50%;
+  }
 }
 
 @media only screen and (min-device-width: 414px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
